andy.css
body { 
	margin: 0;  
	height: 100%;
}

html {
	background: url("images/6.png") no-repeat center center fixed; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	height: 100%;
	width: 100%;
	
}

.leftContentHalf {
	width: 45%;
	height: 100vh;
	opacity: .8;
	background-color: black; /* #EA9F3A */
	font-family: avenir, "freight-sans-pro", sans-serif;
	/*overflow: hidden; */
	min-width: 25%;
}

h1 {
	margin: 0;
	color: white;
	font-weight: 400;
	font-size: 47px;
	padding-top: 5px;
	min-width: 100%;
	max-width: 100%;
}

.textDiv {
	padding-left: 25%;
	padding-top: 100px;
	width: 450px;
	min-width: 75%;
	max-width: 75%;
	display: inline-block;
	overflow: scroll;
}

.textDiv h1 {
    white-space: pre-line;
}

.textDiv h2 {
    white-space: pre-line;
}

.textDiv h3 {
    white-space: pre-line;
}

h2 {
	color: #E2E2E2;
}

h3 {
	color: white;
}

.iconDiv {
	position: fixed;
	width: 45%;
	background-color: #BFBB7E;
	z-index: 2;
	bottom: 0;
	left: 0;
	height: 80px;
}

.gitIcon {
	width: 64px;
	margin-left: 120px;
	margin-top: 10px;
	margin-right: 0px;
	bottom: 0;
	z-index: 3;
	position: fixed;
}

h2 a {
	color: inherit;
}

.linkedInIcon {
	margin-top: 10px;
	margin-left: 200px;
	z-index: 3;
	bottom: 0;
	position: fixed;
	
}

.floatList {
    float: left;
    margin: 0px 0px 0px 0px;
    padding-left: 0px;
    min-width: 25%;
    display: inline-block;
}

.floatList li {
    float: left;
}

a:link { color: #inherit;  } 
a:visited { color: white;  } 
a:hover { color: #inherit;  } 
a:active { color: #inherit;  } 

.breakword {
    word-wrap: break-word;
}
/*Yoda favicon? 

https://scontent-a-atl.xx.fbcdn.net/hphotos-xpf1/t31.0-8/1979185_10152087957767638_1566018366_o.jpg
https://scontent-b-atl.xx.fbcdn.net/hphotos-xfa1/t31.0-8/1965599_10153126783032699_8038925605806111542_o.jpg
https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpf1/t31.0-8/1493335_10153126783102699_1943000050961601144_o.jpg
https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xfa1/t31.0-8/1655051_465245740241872_585748249_o.jpg
*/

